--- a/stlyle.css
+++ b/stlyle.css
@@ -1,3 +1,5 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css);
+
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
@@ -12,15 +14,170 @@ body {
   width: 18%;
   padding: 1rem 2rem;
   font-family: "Roboto", sans-serif;
-  background-color: antiquewhite;
+  border-right: 0.1px solid rgba(209, 201, 201, 0.5);
   display: flex;
   flex-direction: column;
   gap: 3rem;
 }
-.main {
-  width: 82%;
-  background-color: aqua;
+.pages {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
+.pagesCnt {
+  padding-left: 10px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .title {
   font-size: 22px;
+  font-weight: 600;
+}
+.dash::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\e3af";
+  padding-right: 1rem;
+}
+.users::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f0c0";
+  padding-right: 1rem;
+}
+.user::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f007";
+  padding-right: 1rem;
+}
+.account::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f2b9";
+  padding-right: 1rem;
+}
+.commers::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f291";
+  padding-right: 1rem;
+}
+.projects::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f249";
+  padding-right: 1rem;
+}
+.project::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f0b1";
+  padding-right: 1rem;
+}
+.auth::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f3ed";
+  padding-right: 1rem;
+}
+.api::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f084";
+  padding-right: 1rem;
+}
+.welcome::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f06e";
+  padding-right: 1rem;
+}
+.kanban::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f681";
+  padding-right: 1rem;
+}
+
+.main {
+  width: 82%;
+}
+.header {
+  padding: 1rem;
+  width: 97%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 0.1px solid rgba(209, 201, 201, 0.5);
+}
+.profile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+img {
+  width: 2rem;
+}
+
+.search::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f002";
+  padding-right: 1rem;
+}
+.bell::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f0f3";
+  padding-right: 1rem;
+}
+.notificaion::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-regular);
+  content: "\f0c8";
+  padding-right: 1rem;
+}
+.menu::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f141";
+  padding-right: 1rem;
+}
+.wrapper {
+  width: 100%;
+  height: 100%;
 }
