--- a/stlyle.css
+++ b/stlyle.css
@@ -136,6 +136,7 @@ body {
   justify-content: space-between;
   border-bottom: 0.1px solid rgba(209, 201, 201, 0.5);
 }
+
 .profile {
   display: flex;
   align-items: center;
@@ -178,6 +179,33 @@ img {
   padding-right: 1rem;
 }
 .wrapper {
-  width: 100%;
-  height: 100%;
+  width: 97%;
+  padding: 1rem;
+}
+.wrapper > .cnt {
+  padding-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid rgb(246, 246, 249);
+}
+.wrapper > .cnt > span {
+  font-size: 18px;
+  font-weight: 600;
+}
+.wrapper > .cnt > span > .num {
+  font-size: 14px;
+  margin-left: 6px;
+  padding: 6px;
+  color: black;
+  background-color: rgb(231, 232, 236);
+  border: 0;
+  border-radius: 5px;
+}
+.wrapper > .cnt > button {
+  padding: 8px;
+  color: white;
+  background-color: rgb(56, 125, 255);
+  border: 0;
+  border-radius: 5px;
 }
