--- a/stlyle.css
+++ b/stlyle.css
@@ -124,7 +124,28 @@ body {
   content: "\f681";
   padding-right: 1rem;
 }
-
+.pagesCnt > div > .subDiv {
+  display: none;
+}
+.pagesCnt > div > span {
+  display: flex;
+  align-items: center;
+}
+.pagesCnt > div > span > span {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.pagesCnt > div > span > span::after {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font: var(--fa-font-solid);
+  content: "\f078";
+  padding-right: 1rem;
+  cursor: pointer;
+}
 .pagesCnt > div > div {
   margin: 8px;
   border-left: 3px solid rgba(209, 201, 201, 0.5);
@@ -133,7 +154,6 @@ body {
   flex-direction: column;
   gap: 8px;
 }
-
 .main {
   width: 82%;
 }
@@ -337,4 +357,28 @@ img {
 .foot > .right > .active {
   background-color: rgb(56, 125, 255);
   color: white;
+}
+.dot {
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+}
+.green {
+  background-color: lawngreen;
+  position: relative;
+  left: 26px;
+  bottom: 14px;
+}
+.red {
+  background-color: red;
+  position: relative;
+  left: 14px;
+  bottom: 20px;
+}
+
+.pagesCnt > div > .expand {
+  display: block;
+}
+.verify::after {
+  content: url("https://img.icons8.com/ios-filled/18/228BE6/verified-account.png");
 }
