--- a/stlyle.css
+++ b/stlyle.css
@@ -1,5 +1,7 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css);
 
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
+
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
@@ -9,9 +11,10 @@ body {
   height: 100vh;
   width: 100vw;
   display: flex;
+  padding: 5px;
 }
 .nav {
-  width: 18%;
+  width: 13%;
   padding: 1rem 2rem;
   font-family: "Roboto", sans-serif;
   border-right: 0.1px solid rgba(209, 201, 201, 0.5);
@@ -23,42 +26,98 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  color: #616a82;
+  font-size: 12px;
 }
 .pagesCnt {
+  font-size: 14px;
+  color: #132144;
   padding-left: 10px;
-
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
+}
+.pagesCnt > div > span,
+.auth,
+.api,
+.welcome,
+.kanban {
+  cursor: pointer;
+}
+.auth:hover,
+.api:hover,
+.welcome:hover,
+.kanban:hover {
+  color: rgb(56, 125, 255);
+}
+
+.pagesCnt > div > span:hover {
+  color: rgb(56, 125, 255);
+}
+
+.pagesCnt > div > span > span:hover::after {
+  color: #132144;
 }
 
 .title {
   font-size: 22px;
   font-weight: 600;
 }
-.dash::before {
+.dash {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-size: 14px;
+  color: #132144;
+}
+.dashwrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.dashwrap::after {
   display: inline-block;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   font: var(--fa-font-solid);
-  content: "\e3af";
-  padding-right: 1rem;
+  content: "\f078";
+  padding-right: 0.5rem;
+  cursor: pointer;
+  font-size: 12px;
+  color: #132144;
+}
+
+.dash::before {
+  display: inline-block;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  content: url("https://img.icons8.com/material-outlined/24/616a82/home-page.png");
 }
 .users::before {
   display: inline-block;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   font: var(--fa-font-solid);
-  content: "\f0c0";
+  content: "\f500";
   padding-right: 1rem;
 }
 .user::before {
   display: inline-block;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
-  font: var(--fa-font-solid);
+  font: var(--fa-font-regular);
   content: "\f007";
   padding-right: 1rem;
+}
+.noti {
+  position: relative;
+  right: 18px;
+  color: #fff;
+  background-color: rgb(56, 125, 255);
+  padding: 4px 8px;
+  border-radius: 50%;
+  cursor: pointer;
 }
 .account::before {
   display: inline-block;
@@ -127,6 +186,9 @@ body {
 .pagesCnt > div > .subDiv {
   display: none;
 }
+.pagesCnt > div > .subDiv > div {
+  padding: 15px 0;
+}
 .pagesCnt > div > span {
   display: flex;
   align-items: center;
@@ -143,7 +205,8 @@ body {
   -webkit-font-smoothing: antialiased;
   font: var(--fa-font-solid);
   content: "\f078";
-  padding-right: 1rem;
+  padding-right: 0.5rem;
+  font-size: 12px;
   cursor: pointer;
 }
 .pagesCnt > div > div {
@@ -158,41 +221,46 @@ body {
   width: 82%;
 }
 .header {
-  padding: 1rem;
-  width: 97%;
+  padding: 0.8rem 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 0.1px solid rgba(209, 201, 201, 0.5);
+  color: #616a82;
 }
 
 .profile {
+  height: 32px;
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 2.6rem;
 }
 img {
   width: 2rem;
 }
 .search > input {
+  font-size: 18px;
   outline: none;
   border: none;
 }
 .search::before {
+  padding: 0 1rem;
   display: inline-block;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   font: var(--fa-font-solid);
   content: "\f002";
-  padding-right: 1rem;
+  cursor: pointer;
 }
 .bell::before {
   display: inline-block;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
-  font: var(--fa-font-solid);
+  font: var(--fa-font-regular);
   content: "\f0f3";
-  padding-right: 1rem;
+  font-size: 18px;
+  cursor: pointer;
 }
 .notificaion::before {
   display: inline-block;
@@ -200,33 +268,36 @@ img {
   -webkit-font-smoothing: antialiased;
   font: var(--fa-font-regular);
   content: "\f0c8";
-  padding-right: 1rem;
+  cursor: pointer;
+
+  content: url("https://img.icons8.com/external-tal-revivo-regular-tal-revivo/16/616a82/external-blank-file-format-application-with-circular-dot-wireframe-regular-tal-revivo.png");
 }
 .menu::before {
   display: inline-block;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
   font: var(--fa-font-solid);
-  content: "\f141";
-  padding-right: 1rem;
+  content: url("https://img.icons8.com/ios-glyphs/16/616a82/grid-2.png");
+  rotate: 45deg;
+  cursor: pointer;
 }
 .wrapper {
-  width: 97%;
-  padding: 1rem;
+  padding: 0 2rem;
 }
 .wrapper > .cnt {
-  padding-bottom: 1rem;
+  padding: 2rem 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid rgb(246, 246, 249);
+  border-bottom: 1px solid rgba(209, 201, 201, 0.8);
 }
 .wrapper > .cnt > span {
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 600;
+  letter-spacing: 1.5px;
 }
 .wrapper > .cnt > span > .num {
-  font-size: 14px;
+  font-size: 18px;
   margin-left: 6px;
   padding: 6px;
   color: black;
@@ -235,28 +306,35 @@ img {
   border-radius: 5px;
 }
 .wrapper > .cnt > button {
-  padding: 8px;
+  font-size: 18px;
+  padding: 10px 14px;
   color: white;
   background-color: rgb(56, 125, 255);
   border: 0;
+  border: 1px solid rgb(56, 125, 255);
   border-radius: 5px;
 }
+.wrapper > .cnt > button:hover {
+  background-color: white;
+  color: rgb(56, 125, 255);
+  border: 1px solid rgb(56, 125, 255);
+}
 .content {
-  margin: 2rem;
+  margin: 2rem 0;
   border: 0.1px solid rgba(209, 201, 201, 0.5);
   border-radius: 15px;
   height: 500px;
   box-shadow: 2px 2px 10px 0px rgba(209, 201, 201, 0.7);
   display: flex;
   flex-direction: column;
-  padding: 1rem 0;
+  padding: 1 rem;
 }
 .searchbar {
-  padding: 1rem 1.5rem;
+  color: #616a82;
+  padding: 1rem 1.8rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 1rem;
 }
 .searchbar > .right {
   display: flex;
@@ -264,6 +342,8 @@ img {
   gap: 2rem;
 }
 .searchbar > .search {
+  color: #616a8253;
+
   padding-bottom: 8px;
   border-bottom: 1px solid rgba(209, 201, 201, 0.5);
 }
@@ -272,11 +352,17 @@ img {
   outline: none;
 }
 .del {
-  padding: 6px 12px;
-  color: red;
+  padding: 12px 18px;
+  color: #ed4c78;
   background-color: white;
-  border: 1px solid red;
+  border: 1px solid #ed4c78;
   border-radius: 5px;
+  cursor: pointer;
+}
+.del:hover {
+  color: #f8fafd;
+  background-color: #ed4c78;
+  font-weight: 600;
 }
 .del::before {
   display: inline-block;
@@ -288,13 +374,19 @@ img {
 }
 .table {
   flex-grow: 1;
+  border-bottom: 1px solid #a7aab953;
 }
 
 .r1 {
-  padding: 1rem 8px;
+  font-size: 14px;
+  color: #616a82;
+  padding: 1.5rem 8px;
   background-color: #f8fafd;
   display: grid;
   grid-template-columns: 5% 20% 20% 15% 15% 18% 7%;
+  border: 1px solid #a7aab953;
+  border-left: 0;
+  border-right: 0;
 }
 .r1 > span::after {
   content: url(https://img.icons8.com/ios-glyphs/14/dde1ee/sort.png);
@@ -307,7 +399,6 @@ img {
 }
 .r2 {
   padding: 1rem 8px;
-
   display: grid;
   grid-template-columns: 5% 20% 20% 15% 15% 18% 7%;
 }
@@ -315,10 +406,12 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 2.5rem;
+  gap: 3rem;
+  color: #616a82;
 }
 .c2 {
-  gap: 1rem;
+  color: black;
+  gap: 1.8rem;
 }
 .c2 > span,
 .c5 > span {
@@ -337,48 +430,103 @@ img {
 }
 
 .foot {
+  font-size: 14px;
+  color: #616a82;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 1rem 1.5rem;
 }
 .foot > .left > select {
+  color: #616a82;
+  font-size: 14px;
   background-color: white;
   border: none;
   outline: none;
 }
 .foot > .right > button {
+  color: #616a82;
+
   background-color: white;
   border: none;
-  padding: 5px 10px;
+  padding: 10px 15px;
   border-radius: 4px;
+  cursor: pointer;
+}
+.foot > .right > button:hover {
+  background-color: rgba(56, 126, 255, 0.2);
 }
 
 .foot > .right > .active {
   background-color: rgb(56, 125, 255);
   color: white;
 }
+
+.foot > .right > .active:hover {
+  background-color: rgb(56, 125, 255);
+  color: white;
+}
+
 .dot {
-  width: 7px;
-  height: 7px;
+  width: 9px;
+  height: 9px;
   border-radius: 50%;
+  border: 2px solid #fff;
 }
+
 .green {
-  background-color: lawngreen;
+  background-color: #03c9a6;
   position: relative;
-  left: 26px;
-  bottom: 14px;
+  left: 22px;
+  bottom: 16px;
 }
+
 .red {
-  background-color: red;
+  background-color: #ed4c78;
   position: relative;
   left: 14px;
-  bottom: 20px;
+  bottom: 38px;
 }
 
 .pagesCnt > div > .expand {
   display: block;
 }
+
 .verify::after {
   content: url("https://img.icons8.com/ios-filled/18/228BE6/verified-account.png");
+}
+
+.circle {
+  padding: 10px;
+  width: 15px;
+  height: 15px;
+  background-color: #fff;
+  border: 1px solid #69798986;
+  position: absolute;
+  left: 16.25%;
+  border-radius: 50%;
+  cursor: pointer;
+  content: url("https://img.icons8.com/ios/18/697989/long-arrow-left.png");
+}
+
+.logo {
+  font-size: 28px;
+  font-family: "Noto Sans JP", sans-serif;
+}
+
+.squr {
+  position: absolute;
+  top: 36px;
+  left: 38px;
+  rotate: 45deg;
+  border-radius: 50% 0 50% 50%;
+  width: 11px;
+  height: 11px;
+  background-color: #5f5dea;
+}
+.crt {
+  color: rgb(56, 125, 255);
+}
+.crt > span::after {
+  color: #132144;
 }
